# auralis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PRD.md  QUICKSTART.md  README.md  main.py  pyproject.toml  test_fluidsynth.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
auralis/: pyproject.toml
client/: audio_client_worklet.js  audio_worklet_processor.js  debug.html  index.html
composition/: __init__.py  chord_generator.py  melody_generator.py  musical_context.py  percussion_generator.py
deployment/: Dockerfile  docker-compose.yml  nginx.conf
docs/: QUICK_START_GUIDE.md  README.md  SPEC_FLUIDSYNTH.md  ambient-music-context.md  error_recovery_resilience.md  project_structure.md  readme.md  technical-decisions-summary.md  technical-research.md  torchsynth_integration.md
docs/_v01/: IMPLEMENTATION_READY_SUMMARY.md  composition_engine.md  implementation_plan.md  implementation_strategies.md  monitoring_metrics.md  system_architecture.md  technical_specifications.md  testing_strategy.md
docs/grafana/: resource-usage.json  smooth-streaming.json
docs/performance/: baseline-comparison.md
docs/prometheus/: alerts.yml
scripts/performance/: resource_report.py
server/: __init__.py  audio_chunk.py  buffer_management.py  config.py  device_selector.py  di_container.py  exceptions.py  fluidsynth_renderer.py  gc_config.py  logging_config.py  main.py  memory_monitor.py  metrics.py  presets.py  presets.py.bak  ring_buffer.py  soundfont_manager.py  streaming_server.py  synthesis_engine.py
server/interfaces/: __init__.py  buffer.py  jitter.py  metrics.py  synthesis.py
soundfonts/: .env.example  README.md
specs/001-mvp-v2/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-mvp-v2/checklists/: requirements.md
specs/001-mvp-v2/contracts/: http-api.md  internal-interfaces.md  websocket-api.md
specs/001-phase1-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase1-mvp/checklists/: requirements.md
specs/001-phase1-mvp/contracts/: http-api.md  websocket-api.md
specs/002-enhanced-generation-controls/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-enhanced-generation-controls/checklists/: requirements.md
specs/002-enhanced-generation-controls/contracts/: http-api.md
specs/003-performance-optimizations/: GPU_OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_COMPARISON_MATRIX.md  README.md  data-model.md  plan.md  quickstart.md  research-monitoring-metrics.md  research.md  spec.md  tasks.md
specs/003-performance-optimizations/checklists/: requirements.md
specs/003-performance-optimizations/contracts/: internal-interfaces.md  metrics-api.md  websocket-api.md
specs/004-fluidsynth-integration/: data-model.md  plan.md  quickstart.md  research-voice-stealing.md  research.md  spec.md  tasks.md
specs/004-fluidsynth-integration/checklists/: requirements.md
specs/004-fluidsynth-integration/contracts/: README.md
tests/: __init__.py
tests/integration/: __init__.py  test_buffer_underruns.py  test_fluidsynth_rendering.py  test_memory_stability.py  test_parameter_changes.py  test_smooth_streaming.py
tests/performance/: __init__.py  benchmark_suite.py  test_batch_synthesis.py  test_chunk_delivery.py  test_torch_compile.py
tests/unit/: test_adaptive_buffer.py  test_adaptive_buffer.py.bak  test_adaptive_buffer.py.bak2  test_gc_config.py  test_jitter_tracker.py
